--- a/manifest.json
+++ b/manifest.json
@@ -5,10 +5,11 @@
 	"manifest_version": 2,
 	"browser_action": {
 		"default_icon" : "icon.png",
-		"default_title": "Add to Web Page Diff"
+		"default_title": "Add to Web Page Diff",
+    "default_popup": "popup.html"
 	},
 	"background": {
 		"scripts": ["background.js"]
 	},
-	"permissions": ["http://*/"]
+	"permissions": ["tabs", "http://*/"]
 }
