Add "getList" message to background page. Add notification after addPage. Store a list of url in storage.sync.

--- a/manifest.json
+++ b/manifest.json
@@ -11,5 +11,8 @@
 	"background": {
 		"scripts": ["background.js"]
 	},
-	"permissions": ["tabs", "http://*/"]
+	"permissions": ["notifications", "storage", "tabs", "http://*/"],
+  "web_accessible_resources": [
+    "icon.png"
+  ]
 }
