--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,15 @@
 	"background": {
 		"scripts": ["background.js"]
 	},
-	"permissions": ["notifications", "storage", "tabs", "http://*/"],
+	"permissions": ["notifications", "storage", "tabs", "*://*/*"],
+  "content_scripts": [
+    {
+      "matches": ["*://*/*"],
+      "run_at": "document_idle",
+      "css": ["mystyles.css"],
+      "js": ["js/showdiff.js"]
+    }
+  ],
   "web_accessible_resources": [
     "icon.png"
   ]
