--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     "default_popup": "popup.html"
 	},
 	"background": {
-		"scripts": ["background.js"]
+		"scripts": ["js/showdiff.js", "background.js"]
 	},
 	"permissions": ["notifications", "storage", "tabs", "*://*/*"],
   "content_scripts": [
@@ -17,7 +17,7 @@
       "matches": ["*://*/*"],
       "run_at": "document_idle",
       "css": ["mystyles.css"],
-      "js": ["js/showdiff.js"]
+      "js": ["js/showdiff.js", "js/showdiff.js"]
     }
   ],
   "web_accessible_resources": [
